fix: use relative positioning for popover content so that its children are aligned

--- a/www/src/components/common/Popover/popover.module.css
+++ b/www/src/components/common/Popover/popover.module.css
@@ -28,6 +28,6 @@
 		height: 90%;
 		border-radius: 50px;
 		width: 75vw;
-		position: static;
+		position: relative;
 	}
 }
